--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import '../scss/_A-mediaQuery.scss';
 @import '../scss/_B-container.scss';
-@import '../scss/_C-navMob.scss';
+@import '../scss/_C-navs.scss';
 @import '../scss/_D-topOne.scss';
 @import '../scss/_E-topTwo.scss';
 @import '../scss/_F-topThree.scss';
