--- a/scss/_N-footer.scss
+++ b/scss/_N-footer.scss
@@ -5,7 +5,7 @@
   padding: 20px 0 20px 0;
   align-items: center;
   border-top: solid 2px #272727;
-  background-color: #000000;
+  background-color: #1d1d1d;
 
   #one {
     color: rgb(95, 95, 95);
